Encapsulate TripTimes in Timetable